--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@solana/web3.js": "^1.95.8",
     "lucide-react": "^0.553.0",
     "next": "14.2.5",
+    "pino-pretty": "^13.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1"
